--- a/shell/app-shell-web/src/main/webapp/r/list.html
+++ b/shell/app-shell-web/src/main/webapp/r/list.html
@@ -31,16 +31,20 @@
 </head>
 
 <body>
-
-<div class="container">
-    <div class="header">
-        <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="#">Login</a></li>
-            <li><a href="#">Detail</a></li>
-        </ul>
-        <h3 class="text-muted">Product List Table</h3>
+<div class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand hidden-sm" href="/"><img src="img/shell.gif" alt=""/> 壳牌</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="">退出</a></li>
+            </ul>
+        </div>
     </div>
-
+</div>
+<div class="container">
+    <h3 class="text-muted">Product List Table</h3>
     <div class="row marketing">
         <div class="row">
             <div class="col-md-12">
